--- a/content/blog/ra21.md
+++ b/content/blog/ra21.md
@@ -82,3 +82,8 @@ Parce qu'il existe une infrastructure nationale solide autour de la fédération
 Aussi parce que le millefeuille institutionnel de l'enseignement supérieur et de la recherche en France est tout particulièrement complexe, pour ne pas dire carrément bordélique. Comme dit Geoffrey Chaucer : "God woot, it is a shitshow". Les universités, grandes écoles, qui divorcent, fusionnent, s'allient dans des COMUE, des établissements publics, le CNRS partout, les licences nationales, les contrats communs avec les hôpitaux, etc. Dans ce contexte, il est quasiment impossible à Mlle Chibaulet de gérer correctement les accès auxquels elle a droit sur la seule base des adresses IP et de VPNs, elle y passe un temps fou et loupe sans doute plusieurs virages dans ce dédale, dont la complexité limite certainement son usage. Pour les institutions, c'est devenu une usine à gaz dont le rapport coût de gestion / qualité du service n'est tout de même pas terrible...
 
 D'une certaine façon, RA21, parce qu'il gère l'accès plus finement au niveau de Mlle Chibaulet plutôt qu'uniquement au niveau de son/ses institution(s) d'appartenance, serait particulièrement adapté à la situation Française.
+
+> _Mise à jour 25/05/2019_
+> Lisa Hinchliffe me fait remarquer à juste titre que depuis la publication de son billet, un certain nombre de ses craintes ont été discutées par AR21, qui a évolué.
+> Pour autant, l'ARL vient de prendre position contre le projet, jugé trop déséquilibré en faveur des éditeurs.
+> Finalement, mon billet était "accroché" à AR21, mais je pense qu'une progression de l'adoption de Shibboleth, sans la partie AR21, serait déjà un gros progrès.
