--- a/content/blog/ra21.md
+++ b/content/blog/ra21.md
@@ -4,6 +4,7 @@ date = 2019-05-07T20:13:06+02:00
 tags = [ "bibliothèques" ]
 type = "post"
 image = "img/ra21.jpg"
+description = "RA21 c'est bien, commençons par Shibboleth?"
 +++
 
 ## TL;DR
