--- a/content/blog/ra21.md
+++ b/content/blog/ra21.md
@@ -1,7 +1,7 @@
 +++
 title = "RA21"
 date = 2019-05-07T20:13:06+02:00
-tags = [ "bibliothèques" ]
+tags = [ "divers", "bibliothèques" ]
 type = "post"
 feature_image = "/img/ra21.jpg"
 description = "RA21 c'est bien, commençons par Shibboleth?"
